--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "images": "^3.0.1",
     "mongoose": "^5.2.14",
     "multiparty": "^4.2.1",
+    "muse-ui": "^3.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -63,6 +64,7 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
+    "vue-html5-editor": "^1.1.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
