--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "muse-ui-loading": "^0.2.0",
     "muse-ui-toast": "^0.3.0",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -84,6 +85,9 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not ie <= 8",
+    "iOS >= 6",
+    "Android > 4.1",
+    "Firefox > 20"
   ]
 }
