--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "muse-ui-toast": "^0.3.0",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-a",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -68,6 +70,7 @@
     "rimraf": "^2.6.2",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
+    "socket.io": "^2.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
