--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formidable": "^1.2.1",
     "images": "^3.0.1",
     "mongoose": "^5.2.14",
+    "multer": "^1.4.1",
     "multiparty": "^4.2.1",
     "muse-ui": "^3.0.1",
     "muse-ui-loading": "^0.2.0",
